# The-Crucible-Arena

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
arena/: __init__.py  agents.py  main.py  state.py
arena/data/: tech_guardrails.txt
