[project]
name = "capstone-project"
version = "0.1.0"
description = "The Crucible Arena — an adversarial multi-agent product validation engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
crucible-arena = "main:main"
